--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,26 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* Customize the scrollbar */
+::-webkit-scrollbar {
+  width: 6px; /* Width of the scrollbar */
+  height: 6px; /* Height of the horizontal scrollbar */
+}
+
+/* Track (background) */
+::-webkit-scrollbar-track {
+  background: #1e1e2e; /* Color of the scrollbar track */
+}
+
+/* Thumb (scroll handle) */
+::-webkit-scrollbar-thumb {
+  background-color: #6f26ff; /* Color of the scrollbar handle */
+  border-radius: 6px; /* Roundness of the scrollbar handle */
+  border: 2px solid #1e1e2e; /* Adds padding around the thumb */
+}
+
+/* Hover effect for the thumb */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #824fad; /* Darker shade on hover */
+}
