--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,10 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+body,html{
+  width: 100%;
+  overflow-x: hidden;
+}
 
 /* Customize the scrollbar */
 ::-webkit-scrollbar {
